# docu-search

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py  errors.py  middleware.py  router.py
backend/app/api/routes/: admin.py  chat.py  documents.py  evaluation.py  health.py  ingestion.py  pipeline.py  search.py  traces.py
backend/app/chat/: __init__.py  store.py
backend/app/cli/: __init__.py  ask_index.py  chunk_documents.py  clear_database.py  index_chunks.py  ingest_documents.py  migrate_database.py  query_index.py  run_ingestion_worker.py
backend/app/core/: constants.py  env.py  exceptions.py  observability.py
backend/app/db/: __init__.py  connection.py  health.py  migrations.py
backend/app/embeddings/: __init__.py  base.py  local_sentence_transformer.py  pipeline.py
backend/app/evaluation/: __init__.py  dataset.py  history.py  runner.py  schema.py
backend/app/indexing/: __init__.py  pgvector_index.py
backend/app/ingestion/: __init__.py  jobs.py  orchestrator.py  pipeline_testing.py
backend/app/ingestion/chunking/: __init__.py  chunk_schema.py  chunker.py  factory.py  token_counter.py
backend/app/ingestion/chunking/strategies/: __init__.py  base.py  parent_child_chunker.py  structure_grouper.py  table_chunker.py
backend/app/ingestion/cli/: __init__.py  inspect_parser_output.py
backend/app/ingestion/normalizers/: __init__.py  block_schema.py  document_normalizer.py  metadata_normalizer.py  pipeline.py  source_location_normalizer.py  table_normalizer.py  text_normalizer.py
backend/app/ingestion/parsers/: __init__.py  _tabular.py  base.py  csv_parser.py  docx_parser.py  factory.py  json_parser.py  markdown_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  xlsx_parser.py
backend/app/ingestion/validators/: __init__.py  block_validator.py  file_validator.py
backend/app/llm/: __init__.py  ollama_client.py
backend/app/rag/: __init__.py  answerer.py  traces.py
backend/app/schemas/: __init__.py  api.py
backend/app/search/: __init__.py
backend/app/search/cli/: __init__.py  search_chunks.py
backend/app/search/embeddings/: __init__.py  base.py  hash_embedding.py  pipeline.py
backend/app/search/retrieval/: __init__.py  retrieval_schema.py  retriever.py
backend/app/search/vector_store/: __init__.py  base.py  memory_store.py
backend/db/migrations/: 001_pgvector_chunk_index.sql
backend/tests/api/: test_app.py
backend/tests/core/: test_clear_database_cli.py  test_env.py
backend/tests/evaluation/: test_evaluation_runner.py
backend/tests/ingestion/: test_additional_parsers.py  test_block_validator.py  test_chunk_documents_cli.py  test_document_normalizer.py  test_file_validator.py  test_ingestion_orchestrator.py  test_inspect_parser_output_cli.py  test_markdown_parser.py  test_parent_child_chunker.py  test_parser_factory.py  test_pipeline_testing.py  test_text_parser.py
backend/tests/search/: test_production_embedding_pgvector_and_rag.py
docs/: chat-section-architecture.md  frontend-api-reference.md  iteration-one-completion-report.md  iteration-one-operations-runbook.md  production-retrieval-setup.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
storage/: 09_aquila_nested_corpus.parsed.json  (+3 more)
(+33 files in other folders)
