[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docu-search-backend"
version = "0.1.0"
description = "Backend services for document ingestion and search."
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0,<5.0",
    "openpyxl>=3.1,<4.0",
    "pydantic>=2.7,<3.0",
    "pypdf>=5.0,<7.0",
    "PyYAML>=6.0,<7.0",
    "python-docx>=1.1,<2.0",
    "python-pptx>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[project.scripts]
docu-chunk = "app.ingestion.cli.chunk_documents:main"
docu-parse = "app.ingestion.cli.inspect_parser_output:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
