[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docu-search-backend"
version = "0.1.0"
description = "Backend services for document ingestion and search."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "markdown-it-py>=3.0,<5.0",
    "ollama>=0.5,<1.0",
    "openpyxl>=3.1,<4.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic>=2.7,<3.0",
    "pypdf>=5.0,<7.0",
    "PyYAML>=6.0,<7.0",
    "python-docx>=1.1,<2.0",
    "python-dotenv>=1.0,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "python-pptx>=1.0,<2.0",
    "sentence-transformers>=3.0,<6.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
]

[project.scripts]
docu-ingest = "app.cli.ingest_documents:main"
docu-chunk = "app.cli.chunk_documents:main"
docu-ask = "app.cli.ask_index:main"
docu-clear-db = "app.cli.clear_database:main"
docu-index = "app.cli.index_chunks:main"
docu-parse = "app.cli.parse_documents:main"
docu-query = "app.cli.query_index:main"
docu-migrate-db = "app.cli.migrate_database:main"
docu-ingestion-worker = "app.cli.run_ingestion_worker:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
